# FootMeasurement

./: .gitignore  CMakeLists.txt  Measurement.cpp  Measurement.h  README.md  setup.ps1
